# visual-regression-testing

./: README.md
backend/: pyproject.toml
backend/src/app/: main.py
frontend/: .gitignore  backstop.json  package-lock.json  package.json  talkbackServer.js
frontend/src/: styles.css
frontend/src/app/: app.module.ts
frontend/src/app/cards/: card.ts  cards.component.css  cards.component.html  cards.component.ts  cards.service.ts
frontend/src/app/common/: page.ts
frontend/tapes/cards/GET/: tape-1.json5
